# offboard-drone-ctrl

./: CMakeLists.txt  README.md  mavros.launch  offb_init.launch  package.xml
include/offb/: offb.h
launch/: empty_world.launch  memo  offb_init.launch
resource/: scenario_1.yaml
src/: control_node.cpp  main.cpp  offb_node.cpp  offb_node2.cpp  pose_node.cpp
srv/: cmdsrv.srv  send_position.srv
worlds/: bricks.world
worlds/bricks/: model.sdf
